# lime

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  bench_ambit.sh  bench_ambit_microprograms.sh
bench/: abs16.txt  abs32.txt  abs4.txt  abs64.txt  abs8.txt  bitcount16.txt  bitcount32.txt  bitcount4.txt  bitcount64.txt  bitcount8.txt  div4.txt  div8.txt  ifelse16.txt  ifelse32.txt  ifelse4.txt  ifelse64.txt  ifelse8.txt  visualize.py
bench/ntk/: README.md
config/: fcdram_hksynx.toml
rs/: CMakeCache.txt  Cargo.toml  Makefile  build.rs  cmake_install.cmake  compile_commands.json  in.dot
rs/src/: lib.rs  opt_extractor.rs
rs/src/ambit/: compilation.rs  extraction.rs  mod.rs  optimization.rs  program.rs  rows.rs
rs/src/fc_dram/: architecture.rs  compilation.rs  compiler.rs  cost_estimation.rs  egraph_extraction.rs  extraction.rs  mod.rs  optimization.rs  program.rs  utils.rs
rs/src/fc_dram_bottom_up/: mod.rs
rs/src/prada/: architecture.rs  compilation.rs  extraction.rs  mod.rs  program.rs  rows.rs
safe/: lime-infinite
scripts/: build.sh
src/: ambit.h  ambit_benchmark_main.cpp  fcdram.h  fcdram_benchmark_main.cpp  main.cpp  prada.cpp  prada.h  prada_benchmark_main.cpp  utils.cpp  utils.h
