[package]
name = "lime-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# eggmock = { path = "../../eggmock" }
eggmock = { path = "../../eggmock-fork" }
rustc-hash = "2.1.0"
either = "1.13.0"
smallvec = "1.14.0"
ouroboros = "0.18.0"
log = "0.4"

[build-dependencies]
# eggmock = { path = "../../eggmock" }
eggmock = { path = "../../eggmock-fork" }
