[package]
name = "lime-rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# eggmock = { path = "../../eggmock" }
eggmock = { path = "../../eggmock-fork" }
rustc-hash = "2.1.0"
either = "1.13.0"
smallvec = "1.14.0"
ouroboros = "0.18.0"
log = "0.4"
env_logger = "0.11.8"
itertools = "0.14.0"
priority-queue = "2.5.0"
toml = { version = "0.9.1", features = ["serde"] }
strum_macros = "0.27.1"
strum = "0.27.1"
serde = { version="1.0.219", features = ["derive"] }
serde_json = "1.0.143" # for writing chosen compute rows (in FCDRAM) to a json config-file to avoid recomputation

[build-dependencies]
# eggmock = { path = "../../eggmock" }
eggmock = { path = "../../eggmock-fork" }
